--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,58 @@
 
   </head>
   <body class="container">
-    <h1 class="text-danger py-4">Hello, this is my website!</h1>
-    <p><img class="img-fluid" src="/images/boba.jpg"></p>
-      With his customized Mandalorian armor, deadly weaponry, and silent demeanor, Boba Fett was one of the most feared bounty hunters in the galaxy. A genetic clone of his 'father,' bounty hunter Jango Fett, Boba learned combat and martial skills from a young age.
-    </p>
-    <p><img class="img-fluid" src="/images/grogu.jpg"></p>
-      Grogu, colloquially referred to as Baby Yoda, is a character from the Star Wars Disney+ original television series The Mandalorian. He is a toddler member of the same unnamed species as the Star Wars characters Yoda and Yaddle, with whom he shares a strong ability in the Force.
-    </p>
+    <!--<h1 class="text-danger py-4">Hello, this is my website!</h1>-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">My Star Wars Fan Site!</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+          
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+
+    <div class="row">
+      <div class="col-md-3 col-sm-6">
+        <p><img class="img-fluid" src="/images/boba.jpg"></p>
+        With his customized Mandalorian armor, deadly weaponry, and silent demeanor, Boba Fett was one of the most feared bounty hunters in the galaxy. A genetic clone of his 'father,' bounty hunter Jango Fett, Boba learned combat and martial skills from a young age.
+        </p>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <p><img class="img-fluid" src="/images/grogu.jpg"></p>
+        Grogu, colloquially referred to as Baby Yoda, is a character from the Star Wars Disney+ original television series The Mandalorian. He is a toddler member of the same unnamed species as the Star Wars characters Yoda and Yaddle, with whom he shares a strong ability in the Force.
+        </p>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <p><img class="img-fluid" src="/images/boba.jpg"></p>
+        With his customized Mandalorian armor, deadly weaponry, and silent demeanor, Boba Fett was one of the most feared bounty hunters in the galaxy. A genetic clone of his 'father,' bounty hunter Jango Fett, Boba learned combat and martial skills from a young age.
+        </p>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <p><img class="img-fluid" src="/images/grogu.jpg"></p>
+        Grogu, colloquially referred to as Baby Yoda, is a character from the Star Wars Disney+ original television series The Mandalorian. He is a toddler member of the same unnamed species as the Star Wars characters Yoda and Yaddle, with whom he shares a strong ability in the Force.
+        </p>
+      </div>
+    </div>
+
     <p>
-      <a href="https://starwars.com/">Go to StarWars.com</a>
+      <a class="btn btn-success" href="https://starwars.com/">Go to StarWars.com</a>
+    </p>
+
     </p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
